* 0.11.3 (unreleased)
   * Fixed not being able to turn off point defense weapons
   * `sciencegonewrong/02_sciwrong`: make the drones not hostile to other factions
   * `neutral/baron_comm`: fixed trivial warning when trying to clean up baron comm event

* 0.11.2
   * Stopped autonav from preventing wobble and overshooting by crashing the entire game

* 0.11.1
   * Give all ammo back to player after doing obelisk
   * Fixed player being invincible after completing an obelisk
   * Fixed a crash when loading games while a landing hook was running
   * Fixed race condition in threadpool
   * Fixed asteroids spawning in not proper shapes
   * Fixed autonav wobble and overshooting
   * Point defense won't shoot at disabled pilots anymore
   * Fixed battery descriptions
   * Discovering a hidden jump will make both directions known
   * Fixed AI trying to scan hostile targets they lost track of
   * Properly save and load reward_value to and from saves
   * Fixed events and missions being able to trigger in obelisk tests
   * Fixed beam weapons not hitting asteroids
   * Properly compute weapon range with launch_range modifiers
   * Fixed some range checks with inrange weapon sets
   * Fixed Empire Pacifier mass being too low
   * Fixed warning when looking at internal flow amplifier descriptions
   * Removed Soromid Ira turret and forward weapon stats
   * Fixed reality rip and avatar of sirichana abilities giving errors when the AI tries to use them
   * Fixed issue on some systems with indexed images
   * Fixed pirates and pilots that don't care being able to disable the fake transponder
   * Can now see and target allies that are stealthed
   * Pheromone emitter won't do anything in exclusively claimed systems
   * Fixed some weapons such as beams not hitting targets other than selected one
   * Fixed rendering order making it so most effects were below the player
   * Fixed fallback switch weapon sets not being found properly